--- a/scene-lib/build.xml
+++ b/scene-lib/build.xml
@@ -365,6 +365,59 @@
       </sequential>
     </macrodef>
 
+  <!-- Boilerplate to set cfjavac property. Is there a better way? -->
+  <property environment="env"/>
+  <condition property="isUnix">
+    <os family="unix" />
+  </condition>
+  <condition property="isWindows">
+    <os family="windows" />
+  </condition>
+  <target name="init-cfjavac-unix" if="isUnix">
+    <property name="cfjavac" value="${env.CHECKERFRAMEWORK}/checker/bin/javac" />
+  </target>
+  <target name="init-cfjavac-windows" if="isWindows">
+    <property name="cfjavac" value="${env.CHECKERFRAMEWORK}/checker/bin/javac.bat" />
+  </target>
+
+  <target name="check-nullness"
+          description="Check for nullness errors."
+          depends="init,clean,init-cfjavac-unix,init-cfjavac-windows">
+    <mkdir dir="bin"/>
+    <javac srcdir="src" destdir="bin" debug="true" encoding="8859_1"
+           fork="yes"
+           executable="${cfjavac}">
+      <compilerarg value="-version"/>
+      <compilerarg line="-target 8"/>
+      <compilerarg line="-processor org.checkerframework.checker.nullness.NullnessChecker"/>
+      <compilerarg value="-implicit:class"/>
+      <compilerarg line="-Awarns -Xmaxwarns 10000"/>
+      <classpath>
+        <path refid="libpath"/>
+        <pathelement location="${env.annotations}/checker/dist/checker.jar"/>
+      </classpath>
+    </javac>
+  </target>
+
+  <target name="check-signature"
+          description="Check for signature errors."
+          depends="init,clean,init-cfjavac-unix,init-cfjavac-windows">
+    <mkdir dir="bin"/>
+    <javac srcdir="src" destdir="bin" debug="true" encoding="8859_1"
+           fork="yes"
+           executable="${cfjavac}">
+      <compilerarg value="-version"/>
+      <compilerarg line="-target 8"/>
+      <compilerarg line="-processor org.checkerframework.checker.signature.SignatureChecker"/>
+      <compilerarg value="-implicit:class"/>
+      <compilerarg line="-Awarns -Xmaxwarns 10000"/>
+      <classpath>
+        <path refid="libpath"/>
+        <pathelement location="${env.annotations}/checker/dist/checker.jar"/>
+      </classpath>
+    </javac>
+  </target>
+
   <target name="etags" depends="tags">
   </target>
   <target name="tags" description="Create Emacs TAGS table">
